--- a/client/cancel.html
+++ b/client/cancel.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e779bba2dd.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/example.css">
-    <title>Document</title>
+    <title>Payment Cancel</title>
 </head>
 <body>
     <div class="nav-top">
